# TileCycles

./: .gitignore  @20  @40  LICENSE  MANIFESt.in  Makefile  Pipfile  README.md  TileCycles+kG_test.ipynb  TileCycles.ipynb  benchmark.py  c_tilecycles.cpp  pyproject.toml  setup.py  test-cpp.cpp  test.py  tilecycle_profile.py  tilecycles.cpp  tilecycles.hpp  tilecycles.py  tilecycles_c.cpp  tilecycles_c.hpp  tilecycles_cython.pyx  tilecycles_py.py
cpp/: c_tilecycles.cpp  test-cpp.cpp
testing/: f_tilecycles-f2pywrappers2.f90  f_tilecyclesmodule.c  mt19937.f95  test-cpp.cpp  test_cpp.py  test_f95.py  tilecycles.c  tilecycles.f95
tests/: TileCycles.ipynb
tilecycles/: Buch.py  Dipole.py  Rahman.py  __init__.py
